# specalign

./: .gitignore  Notes.md  README.md  environment.yml  pyproject.toml
notebooks/: encdec_dev.ipynb  gkd.ipynb  gkd_dev.ipynb  gkd_encdec.ipynb  sft.ipynb
src/specalign/: main.py  utils.py
